<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GhostBe</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="host">Host IP</string>
    <string name="port">Port</string>
    <string name="select_apps">Select Apps</string>
    <string name="status">Status</string>
</resources>
